// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details should render with all props 1`] = `
<div>
  <div
    class="ui-lib-viewport ui-lib-viewport_lg"
  >
    <div
      class="container"
    >
      <div
        class=""
      >
        <h3
          class="syb-title"
          style="margin-bottom: 2rem;"
        >
          Kellogg's Corn Flakes 500 gm / Germany
        </h3>
        <p
          style="color: rgb(63, 62, 69);"
        >
          desc
        </p>
      </div>
      <div
        class="ant-row ui-lib-grid-row-flex ui-lib-grid-row-flex-start ui-lib-grid-row-flex-top ui-lib-grid-row "
        style="margin-left: -10px; margin-right: -10px; justify-content: flex-end;"
      >
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-0 ui-lib-grid-col  ui-lib-grid-col-xs-24 ui-lib-grid-col-sm-24"
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            style="float: right;"
          >
            <div
              class="ui-lib-dropdown"
              data-opened="false"
            >
              <button
                aria-label="button"
                class="ui-lib-button qa-button ui-lib-button_ghost ui-lib-button_small ui-lib-button_icon-end ui-lib-button_space-between ui-lib-button_with-icon"
                name="sory-by"
                type="button"
              >
                global.sortBy
                <svg
                  class="ui-lib-button__icon ui-lib-icon"
                  data-key=""
                  height="24"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title />
                  <path
                    d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ui-lib-grid-row ui-lib-grid-row "
        style="margin-left: -10px; margin-right: -10px;"
      >
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-6 ui-lib-grid-col "
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            class="ui-lib-filter"
          >
            <h5
              class="ui-lib-filter__title"
            >
              Filter by
            </h5>
            <div
              class="ui-lib-filter__body"
            >
              <div
                class="ui-lib-accordion"
              >
                <div
                  class="ui-lib-accordion-item ui-lib-accordion-item_expanded"
                  data-no-side-paddings="false"
                  data-ui-type="narrow"
                >
                  <button
                    class="ui-lib-accordion-item__head"
                    type="button"
                  >
                    <div
                      class="ui-lib-accordion-item__head-title"
                      data-bold="true"
                      data-wide="true"
                    >
                      global.retailers
                    </div>
                    <div
                      class="ui-lib-accordion-item__head-indicator-wrapper"
                    >
                      <svg
                        class="ui-lib-accordion-item__head-indicator ui-lib-icon"
                        data-key=""
                        height="24"
                        tabindex="0"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title />
                        <path
                          d="M1.5,13.5h21a1.5,1.5,0,0,0,0-3H1.5a1.5,1.5,0,0,0,0,3Z"
                        />
                      </svg>
                    </div>
                  </button>
                  <div
                    class="ui-lib-accordion-item__body"
                    data-expanded="true"
                    style="max-height: auto; overflow: visible;"
                  >
                    <div
                      class="ui-lib-accordion-item__body-content"
                    >
                      <div
                        style="padding: 0px;"
                      >
                        <div>
                          <div
                            class="ui-lib-checkbox-group ui-lib-checkbox-group_vertical-align qa-checkbox-group"
                          >
                            
                            <div
                              class="ui-lib-checkbox-group__items"
                            >
                              <div
                                class="ui-lib-checkbox-wrap"
                              >
                                <label
                                  class="ui-lib-checkbox"
                                >
                                  <input
                                    class="ui-lib-checkbox__input"
                                    data-index="0"
                                    name="KM Trading"
                                    tabindex="0"
                                    type="checkbox"
                                    value="KM Trading"
                                  />
                                  <span
                                    class="ui-lib-checkbox__box"
                                  >
                                    <svg
                                      class="ui-lib-checkbox__box-mark ui-lib-icon"
                                      data-key=""
                                      height="24"
                                      tabindex="0"
                                      version="1.1"
                                      viewBox="0 0 24 24"
                                      width="24"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <title />
                                      <path
                                        d="M23.374.287a1.5,1.5,0,0,0-2.093.345L7.246,20.2,2.561,15.511A1.5,1.5,0,1,0,.439,17.632l5.935,5.934a1.525,1.525,0,0,0,2.279-.186l15.066-21A1.5,1.5,0,0,0,23.374.287Z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="ui-lib-checkbox__label"
                                  >
                                    <span
                                      class="ui-lib-checkbox__label-text"
                                    >
                                      KM Trading
                                    </span>
                                    
                                  </span>
                                </label>
                                
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ui-lib-accordion-item ui-lib-accordion-item_expanded"
                  data-no-side-paddings="false"
                  data-ui-type="narrow"
                >
                  <button
                    class="ui-lib-accordion-item__head"
                    type="button"
                  >
                    <div
                      class="ui-lib-accordion-item__head-title"
                      data-bold="true"
                      data-wide="true"
                    >
                      global.location
                    </div>
                    <div
                      class="ui-lib-accordion-item__head-indicator-wrapper"
                    >
                      <svg
                        class="ui-lib-accordion-item__head-indicator ui-lib-icon"
                        data-key=""
                        height="24"
                        tabindex="0"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title />
                        <path
                          d="M1.5,13.5h21a1.5,1.5,0,0,0,0-3H1.5a1.5,1.5,0,0,0,0,3Z"
                        />
                      </svg>
                    </div>
                  </button>
                  <div
                    class="ui-lib-accordion-item__body"
                    data-expanded="true"
                    style="max-height: auto; overflow: visible;"
                  >
                    <div
                      class="ui-lib-accordion-item__body-content"
                    >
                      <div
                        style="padding: 0px;"
                      >
                        <div>
                          <div
                            class="ui-lib-checkbox-group ui-lib-checkbox-group_vertical-align qa-checkbox-group"
                          >
                            
                            <div
                              class="ui-lib-checkbox-group__items"
                            >
                              <div
                                class="ui-lib-checkbox-wrap"
                              >
                                <label
                                  class="ui-lib-checkbox"
                                >
                                  <input
                                    class="ui-lib-checkbox__input"
                                    data-index="0"
                                    name="ALAIN"
                                    tabindex="0"
                                    type="checkbox"
                                    value="ALAIN"
                                  />
                                  <span
                                    class="ui-lib-checkbox__box"
                                  >
                                    <svg
                                      class="ui-lib-checkbox__box-mark ui-lib-icon"
                                      data-key=""
                                      height="24"
                                      tabindex="0"
                                      version="1.1"
                                      viewBox="0 0 24 24"
                                      width="24"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <title />
                                      <path
                                        d="M23.374.287a1.5,1.5,0,0,0-2.093.345L7.246,20.2,2.561,15.511A1.5,1.5,0,1,0,.439,17.632l5.935,5.934a1.525,1.525,0,0,0,2.279-.186l15.066-21A1.5,1.5,0,0,0,23.374.287Z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="ui-lib-checkbox__label"
                                  >
                                    <span
                                      class="ui-lib-checkbox__label-text"
                                    >
                                      ALAIN
                                    </span>
                                    
                                  </span>
                                </label>
                                
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ui-lib-filter__controls"
            >
              <button
                aria-label="button"
                class="ui-lib-button qa-button ui-lib-button_primary ui-lib-button_medium ui-lib-button_icon-end"
                type="button"
              >
                filter
              </button>
              <button
                aria-label="reset-filter-button"
                class="ui-lib-button qa-button ui-lib-button_ghost ui-lib-button_small ui-lib-button_icon-end"
                type="button"
              >
                reset filters
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-0 ui-lib-grid-col override-container ui-lib-grid-col-xs-24 ui-lib-grid-col-sm-24 ui-lib-grid-col-md-18"
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            class="ui-lib-table"
          >
            <div
              class="ui-lib-table__root"
              data-round-bottom="true"
              data-round-top="true"
            >
              <table
                class="ui-lib-table__root-grid"
              >
                <thead
                  class="ui-lib-table-header"
                >
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="default"
                    data-underlined="false"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.retailer
                      </span>
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.location
                      </span>
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.price
                      </span>
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.priceDate
                      </span>
                      
                    </td>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      10000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      20000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      30000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      40000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      50000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      60000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="false"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      70000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            
          </div>
          <div
            style="height: 40px;"
          />
          <div
            style="height: 40px;"
          />
          <hr />
          <div
            style="height: 40px;"
          />
          <span
            style="padding-right: 20px;"
          >
            <button
              aria-label="back-button"
              class="ui-lib-button qa-button ui-lib-button_primary ui-lib-button_default ui-lib-button_icon-end"
              type="button"
            >
              back-button
            </button>
          </span>
        </div>
      </div>
      <div
        style="height: 80px;"
      />
    </div>
  </div>
</div>
`;

exports[`Details should render with all props, ar 1`] = `
<div>
  <div
    class="ui-lib-viewport ui-lib-viewport_lg"
  >
    <div
      class="container"
    >
      <div
        class=""
      >
        <h3
          class="syb-title"
          style="margin-bottom: 2rem;"
        >
          كورن فليكس / 500 جرام / ألمانيا
        </h3>
        <p
          style="color: rgb(63, 62, 69);"
        >
          desc
        </p>
      </div>
      <div
        class="ant-row ui-lib-grid-row-flex ui-lib-grid-row-flex-start ui-lib-grid-row-flex-top ui-lib-grid-row "
        style="margin-left: -10px; margin-right: -10px; justify-content: flex-end;"
      >
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-0 ui-lib-grid-col  ui-lib-grid-col-xs-24 ui-lib-grid-col-sm-24"
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            style="float: right;"
          >
            <div
              class="ui-lib-dropdown"
              data-opened="false"
            >
              <button
                aria-label="button"
                class="ui-lib-button qa-button ui-lib-button_ghost ui-lib-button_small ui-lib-button_icon-end ui-lib-button_space-between ui-lib-button_with-icon"
                name="sory-by"
                type="button"
              >
                global.sortBy
                <svg
                  class="ui-lib-button__icon ui-lib-icon"
                  data-key=""
                  height="24"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title />
                  <path
                    d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ui-lib-grid-row ui-lib-grid-row "
        style="margin-left: -10px; margin-right: -10px;"
      >
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-6 ui-lib-grid-col "
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            class="ui-lib-filter"
          >
            <h5
              class="ui-lib-filter__title"
            >
              Filter by
            </h5>
            <div
              class="ui-lib-filter__body"
            >
              <div
                class="ui-lib-accordion"
              >
                <div
                  class="ui-lib-accordion-item ui-lib-accordion-item_expanded"
                  data-no-side-paddings="false"
                  data-ui-type="narrow"
                >
                  <button
                    class="ui-lib-accordion-item__head"
                    type="button"
                  >
                    <div
                      class="ui-lib-accordion-item__head-title"
                      data-bold="true"
                      data-wide="true"
                    >
                      global.retailers
                    </div>
                    <div
                      class="ui-lib-accordion-item__head-indicator-wrapper"
                    >
                      <svg
                        class="ui-lib-accordion-item__head-indicator ui-lib-icon"
                        data-key=""
                        height="24"
                        tabindex="0"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title />
                        <path
                          d="M1.5,13.5h21a1.5,1.5,0,0,0,0-3H1.5a1.5,1.5,0,0,0,0,3Z"
                        />
                      </svg>
                    </div>
                  </button>
                  <div
                    class="ui-lib-accordion-item__body"
                    data-expanded="true"
                    style="max-height: auto; overflow: visible;"
                  >
                    <div
                      class="ui-lib-accordion-item__body-content"
                    >
                      <div
                        style="padding: 0px;"
                      >
                        <div>
                          <div
                            class="ui-lib-checkbox-group ui-lib-checkbox-group_vertical-align qa-checkbox-group"
                          >
                            
                            <div
                              class="ui-lib-checkbox-group__items"
                            >
                              <div
                                class="ui-lib-checkbox-wrap"
                              >
                                <label
                                  class="ui-lib-checkbox"
                                >
                                  <input
                                    class="ui-lib-checkbox__input"
                                    data-index="0"
                                    name="ك. ام للتجارة"
                                    tabindex="0"
                                    type="checkbox"
                                    value="ك. ام للتجارة"
                                  />
                                  <span
                                    class="ui-lib-checkbox__box"
                                  >
                                    <svg
                                      class="ui-lib-checkbox__box-mark ui-lib-icon"
                                      data-key=""
                                      height="24"
                                      tabindex="0"
                                      version="1.1"
                                      viewBox="0 0 24 24"
                                      width="24"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <title />
                                      <path
                                        d="M23.374.287a1.5,1.5,0,0,0-2.093.345L7.246,20.2,2.561,15.511A1.5,1.5,0,1,0,.439,17.632l5.935,5.934a1.525,1.525,0,0,0,2.279-.186l15.066-21A1.5,1.5,0,0,0,23.374.287Z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="ui-lib-checkbox__label"
                                  >
                                    <span
                                      class="ui-lib-checkbox__label-text"
                                    >
                                      ك. ام للتجارة
                                    </span>
                                    
                                  </span>
                                </label>
                                
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ui-lib-accordion-item ui-lib-accordion-item_expanded"
                  data-no-side-paddings="false"
                  data-ui-type="narrow"
                >
                  <button
                    class="ui-lib-accordion-item__head"
                    type="button"
                  >
                    <div
                      class="ui-lib-accordion-item__head-title"
                      data-bold="true"
                      data-wide="true"
                    >
                      global.location
                    </div>
                    <div
                      class="ui-lib-accordion-item__head-indicator-wrapper"
                    >
                      <svg
                        class="ui-lib-accordion-item__head-indicator ui-lib-icon"
                        data-key=""
                        height="24"
                        tabindex="0"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title />
                        <path
                          d="M1.5,13.5h21a1.5,1.5,0,0,0,0-3H1.5a1.5,1.5,0,0,0,0,3Z"
                        />
                      </svg>
                    </div>
                  </button>
                  <div
                    class="ui-lib-accordion-item__body"
                    data-expanded="true"
                    style="max-height: auto; overflow: visible;"
                  >
                    <div
                      class="ui-lib-accordion-item__body-content"
                    >
                      <div
                        style="padding: 0px;"
                      >
                        <div>
                          <div
                            class="ui-lib-checkbox-group ui-lib-checkbox-group_vertical-align qa-checkbox-group"
                          >
                            
                            <div
                              class="ui-lib-checkbox-group__items"
                            >
                              <div
                                class="ui-lib-checkbox-wrap"
                              >
                                <label
                                  class="ui-lib-checkbox"
                                >
                                  <input
                                    class="ui-lib-checkbox__input"
                                    data-index="0"
                                    name="العين"
                                    tabindex="0"
                                    type="checkbox"
                                    value="العين"
                                  />
                                  <span
                                    class="ui-lib-checkbox__box"
                                  >
                                    <svg
                                      class="ui-lib-checkbox__box-mark ui-lib-icon"
                                      data-key=""
                                      height="24"
                                      tabindex="0"
                                      version="1.1"
                                      viewBox="0 0 24 24"
                                      width="24"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <title />
                                      <path
                                        d="M23.374.287a1.5,1.5,0,0,0-2.093.345L7.246,20.2,2.561,15.511A1.5,1.5,0,1,0,.439,17.632l5.935,5.934a1.525,1.525,0,0,0,2.279-.186l15.066-21A1.5,1.5,0,0,0,23.374.287Z"
                                      />
                                    </svg>
                                  </span>
                                  <span
                                    class="ui-lib-checkbox__label"
                                  >
                                    <span
                                      class="ui-lib-checkbox__label-text"
                                    >
                                      العين
                                    </span>
                                    
                                  </span>
                                </label>
                                
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ui-lib-filter__controls"
            >
              <button
                aria-label="button"
                class="ui-lib-button qa-button ui-lib-button_primary ui-lib-button_medium ui-lib-button_icon-end"
                type="button"
              >
                filter
              </button>
              <button
                aria-label="reset-filter-button"
                class="ui-lib-button qa-button ui-lib-button_ghost ui-lib-button_small ui-lib-button_icon-end"
                type="button"
              >
                reset filters
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-col ui-lib-grid-col ui-lib-grid-col-0 ui-lib-grid-col override-container ui-lib-grid-col-xs-24 ui-lib-grid-col-sm-24 ui-lib-grid-col-md-18"
          style="padding-left: 10px; padding-right: 10px;"
        >
          <div
            class="ui-lib-table"
          >
            <div
              class="ui-lib-table__root"
              data-round-bottom="true"
              data-round-top="true"
            >
              <table
                class="ui-lib-table__root-grid"
              >
                <thead
                  class="ui-lib-table-header"
                >
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="default"
                    data-underlined="false"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.retailer
                      </span>
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.location
                      </span>
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.price
                      </span>
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="true"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="header"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        global.priceDate
                      </span>
                      
                    </td>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      10000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      20000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      30000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      40000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      50000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="true"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      60000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                  <tr
                    class="ui-lib-table-row"
                    data-highlighted="false"
                    data-ui-type="regular"
                    data-underlined="false"
                    style="vertical-align: top;"
                  >
                    <td
                      aria-label="store"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="location"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      
                    </td>
                    <td
                      aria-label="price"
                      class="ui-lib-table-cell"
                      data-align="end"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      70000
                      
                    </td>
                    <td
                      aria-label="collectionDate"
                      class="ui-lib-table-cell"
                      data-align="start"
                      data-collapsed="false"
                      data-disabled="false"
                      data-fit-content-width="false"
                      data-hoverable="false"
                      data-is-extra="false"
                      data-is-header="false"
                      data-size="default"
                      data-sortable="false"
                      data-ui-type="regular"
                      role="gridcell"
                      tabindex="0"
                    >
                      <span
                        class="ui-lib-table-cell_bdi"
                      >
                        2019-10-27T20:00:00.000Z
                      </span>
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            
          </div>
          <div
            style="height: 40px;"
          />
          <div
            style="height: 40px;"
          />
          <hr />
          <div
            style="height: 40px;"
          />
          <span
            style="padding-right: 20px;"
          >
            <button
              aria-label="back-button"
              class="ui-lib-button qa-button ui-lib-button_primary ui-lib-button_default ui-lib-button_icon-end"
              type="button"
            >
              back-button
            </button>
          </span>
        </div>
      </div>
      <div
        style="height: 80px;"
      />
    </div>
  </div>
</div>
`;

exports[`Details should render without response.length 1`] = `
<div>
  <div
    class="ui-lib-viewport ui-lib-viewport_lg"
  >
    <div
      class="container"
    >
      <div
        style="margin: 6rem; display: flex; justify-content: center;"
      >
        <div
          class="ui-lib-spinner qa-spinner ui-lib-spinner_logo"
        />
      </div>
      <div
        style="height: 80px;"
      />
    </div>
  </div>
</div>
`;
